<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Dianmin4Activity!</string>
    <string name="app_name">蓝牙点名</string>
    <string name="andriodMAC">*Android手机在打开蓝牙情况下，在系统设置-关于手机-状态消息中找到蓝牙地址。\n\n*诺基亚手机在待机界面输入“*#2820#”即可查看蓝牙地址\n\n*苹果手机在设置-通用-关于手机中找到蓝牙地址</string>
    <string name="cqjl">出勤记录</string>
    <string name="xmxh">学号姓名</string>
    <string name="qjcs">请假次数</string>
    <string name="wdcs">未到次数</string>
    <string name="wd">未到</string>
    <string name="dcjl">导出记录</string>
    <string name="xzbj">选择班级</string>
    <string name="qsrdxnr">请输入短信内容</string>
    <string name="xsdm">学生点名</string>
    <string name="wdxsmd">未到学生名单</string>
    <string name="dm">点名</string>
    <string name="dj">登记</string>
    <string name="opreation">是否删除</string>
    <string name="dxtx">短信提醒</string>
    
    <string name="qj">请假</string>
    <string name="yd">已到</string>
    <string name="drbj">导入班级</string>
    <string name="bt">必填</string>
    <string name="xh">学号</string>
    <string name="xm">姓名</string>
    <string name="lybh">蓝牙编号</string>
    <string name="phone">手机号码</string>
    <string name="macxt">选填（填入Mac地址将使点名更准确）</string>
    <string name="hmxt">不使用短信功能的用户可不填</string>
    <string name="sjhm">手机号码</string>
    <string name="xsmd">学生名单</string>
    <string name="about">软件版本：V1.1\n\n本软件致力于减轻教师点名负担，优化课堂时间分配\n\n感谢对本软件的支持\n\nQQ：975335045\nTel:18010925631\n滁州学院贾发展制作</string>
    <string name="scbj">删除班级</string>
    <string name="cancelxs">删除学生</string>
    <string name="scbjtext">确认删除本班？删除后将无法恢复</string>
    <string name="cancelxstext">确认删除学生？删除后将无法恢复</string>
    <string name="qr">确认</string>
    <string name="scwc">删除完成</string>
    <string name="qx">取消</string>
    <string name="qrdrbj">确认导入班级？</string>
    <string name="bjycz">班级已存在</string>
    <string name="ksdr">开始导入</string>
    <string name="drwc">导入完成</string>
    <string name="dcwc">导出完成</string>
    <string name="dcwctext">导出的Excel文件将放在SD卡目录下的“出勤记录”文件夹</string>
    <string name="jg">警告</string>
    <string name="jgtext">确认将本班出勤记录清零？</string>
    <string name="smwc">扫描完成</string>
    <string name="zzsm">正在扫描……(扫描过程将耗费一定的时间，请耐心等待)。注：点名时请学生不要启动自己的扫描功能</string>
    <string name="jgtextt">开始点名前，请先让学生打开手机蓝牙。（Android手机还要打开蓝牙可见性，苹果手机请将界面停留在设置-通用-蓝牙上（看见“现为可被发现状态”即可））</string>
    <string name="ksdm">开始点名</string>
    <string name="fs">发送</string>
    <string name="fscg">发送成功</string>
    <string name="xzdmfs">选择点名方式</string>
    <string name="xzdmfstext">继续点名: 保留上一次点名结果进行点名，可以防止漏点情况的发生\n\n重新点名: 清空所有数据进行重新点名</string>
    <string name="jxdm">继续点名</string>
    <string name="cxdm">重新点名</string>
    <string name="dmwks">点名未开始</string>
    <string name="zzdmqsh">"正在点名，请稍后"</string>
    <string name="ydq">已到齐</string>
    <string name="hmk">号码列表为空，不能使用此功能</string>
    <string name="djywc">登记已完成</string>
    <string name="djywcwcf">登记已完成，请勿重复</string>
    <string name="xgxsxx">修改学生信息</string>
    <string name="bc">保存</string>
    <string name="rhmac">如何获得Mac地址</string>
    <string name="jgtexttt">请完整输入学号和姓名</string>
    <string name="hdmac">获得蓝牙Mac地址</string>
    <string name="tjxs">添加学生</string>
    <string name="zzdr">正在导入</string>
    <string name="SD">SD不可用</string>
</resources>