<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="55dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/cqjl" 
        android:background="#068ac9"
        android:textColor="#ffffff"
        android:textSize="20dip"
        android:gravity="center"/>
    <ImageButton
        android:contentDescription="@string/app_name"
        android:id="@+id/imageButton1"
        android:layout_width="55dip"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#068ac9"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />
    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_above="@+id/button1"
        android:layout_below="@+id/textView2"
        android:background="#d4d0d0" >
    </ListView>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/textView3"
        android:text="@string/xmxh"
        android:gravity="center"
        android:textColor="#000000" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView1"
        android:layout_alignParentRight="true"
        android:text="@string/qjcs"
        android:gravity="center"
        android:textColor="#00ff00" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/textView4"
        android:text="@string/wdcs"
        android:textColor="#ff0000" 
        android:gravity="center"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableTop="@android:drawable/ic_menu_set_as"
        android:text="@string/dcjl" />
</RelativeLayout>