<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#000000">
	<LinearLayout
    	android:id="@+id/dianming"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#33eeaaee"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/dianmingfanhui"
            android:layout_width="wrap_content"
            android:layout_height="45.0dip"
            android:layout_weight="0.0"
            android:src="@drawable/title_back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="#ffffffff"
            android:textSize="20.0dip"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/dianmingzhuye"
            android:layout_width="wrap_content"
            android:layout_height="43.0dip"
            android:layout_marginRight="8.0dip"
            android:layout_weight="0.0"
            android:src="@drawable/title_home" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dianming"
        android:text="@string/wdxsmd"
        android:textColor="#000000" 
        android:background="#ffffff"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/listView1"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toRightOf="@+id/button2"
        android:drawableBottom="@drawable/button"
        android:text="@string/dm" />
    <Button
        android:id="@+id/button2"
        android:layout_width="90dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/dj" 
        android:background="@android:color/transparent"
        android:textColor="#ffffff"
        android:drawableTop="@android:drawable/ic_menu_my_calendar"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="90dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/dxtx" 
        android:background="@android:color/transparent"
        android:textColor="#ffffff"
        android:drawableTop="@android:drawable/ic_menu_send"/>
    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:background="#d4d0d0" >
    </ListView>

</RelativeLayout>